fix: change color for legibility

--- a/src/extensions/community_extensions/_clippyPoint-styles.scss
+++ b/src/extensions/community_extensions/_clippyPoint-styles.scss
@@ -27,8 +27,8 @@ $_margin: $_arrow-width + $_clippy-width + $_left-pad;
       height: $_clippy-height;
       left: ($_arrow-width + $_left-pad);
       border-radius: v.$radius;
-      @include v.theme("color", v.$primary);
-      @include v.theme("text-shadow", v.$bodyText, false, true "0px 1px 0px");
+      @include v.theme("color", v.$voteText-upvote);
+      @include v.theme("text-shadow", v.$darkText, false, true, "1px 1px 1px");
       font-size: 150%;
       font-weight: bold;
       text-align: center;
